# archive

./: .gitattributes  README.md
archives/archive_docs-06/Federation/src/: CMakeLists.txt
archives/archive_docs-06/Federation/src/Editor/: CMakeLists.txt  Editor.cpp  Editor.h  main.cpp
archives/archive_docs-06/Federation/src/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  main.cpp
archives/archive_docs-06/Federation/src/Engine/Systems/Audio/: AudioSystem.cpp  AudioSystem.h  CMakeLists.txt
archives/archive_docs-06/Federation/src/Engine/Systems/Render/: CMakeLists.txt  Renderer.cpp  Renderer.h  main.cpp
archives/archive_docs-06/Federation/src/Renderer/: CMakeLists.txt
archives/archive_docs-06/Federation/src/Renderer/Graphics/: CMakeLists.txt  draw_triangle.cpp  graphics_test_main.cpp
archives/archive_docs-06/Federation/src/Renderer/Graphics/Devices/: LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h  VInstance.cpp  VInstance.h  VSurface.cpp  VSurface.h  VWindow.cpp  VWindow.h  devices.ini
archives/archive_docs-06/Federation/src/Renderer/Graphics/Render/: GraphicsPipeline.cpp  GraphicsPipeline.h  Swapchain.cpp  Swapchain.h
archives/archive_docs-06/GoogleTestProject/GoogleTestProject/: CMakeLists.txt  Project1.cpp  Project1.h
archives/archive_docs-06/GoogleTestProject/GoogleTestProject/tests/: CMakeLists.txt  TestProject1.cpp  main.cpp
archives/archive_docs-06/LoggerCpp/src/Logger/: CMakeLists.txt  LogViewer.cpp  LogViewer.h  Logger.cpp  Logger.h  LoggerDefines.h
archives/archive_docs-06/LoggerCpp/tests/: CMakeLists.txt
archives/archive_docs-06/RenderEngine/0.0.1/src/: CMakeLists.txt
archives/archive_docs-06/RenderEngine/0.0.1/src/Launcher/: README.md
archives/archive_docs-06/RenderEngine/0.0.1/src/Renderer/Devices/: CMakeLists.txt  LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h  VInstance.cpp  VInstance.h  VWindow.cpp  VulkanCommon.h  VulkanConstants.h  VulkanDefines.h
archives/archive_docs-06/RenderEngine/0.0.1/src/Renderer/Graphics/: CMakeLists.txt  Renderer.cpp  Renderer.h  VulkanDefines.h
archives/archive_docs-06/VulkanEngine/: CMakeLists.txt  README.md
archives/archive_docs-06/VulkanEngine/samples/scenes/Default/: Default.scene
archives/archive_docs-06/VulkanEngine/src/Core/Compute/: CMakeLists.txt
archives/archive_docs-06/VulkanEngine/src/Core/Graphics/: CMakeLists.txt
archives/archive_docs-06/VulkanEngine/src/Core/Graphics/Buffer/: Buffer.cpp  Buffer.h  IndexBuffer.h  StageBuffer.cpp  StageBuffer.h  SwapChain.cpp  SwapChain.h  VertexBuffer.cpp  VertexBuffer.h
archives/archive_docs-06/VulkanEngine/src/Core/Graphics/Devices/: CMakeLists.txt  PhysicalDevice.cpp  PhysicalDevice.h  Surface.cpp  Surface.h  VInstance.cpp  VInstance.h  VWindow.cpp  VWindow.h  devices.cfg
archives/archive_docs-06/VulkanEngine/src/Core/Graphics/Pipeline/: pipeline.cfg
archives/archive_docs-06/VulkanEngine/src/Core/Render/: CMakeLists.txt
archives/archive_docs-06/VulkanEngine/src/Core/Render/Pass/: ColorPass.cpp  ColorPass.h  RenderPass.cpp  RenderPass.h
archives/archive_docs-06/VulkanEngine/src/Core/Render/Renderer/: Renderer.cpp  Renderer.h
archives/archive_docs-06/VulkanEngine/src/Core/Render/Scene/: Scene.h  SceneManager.h
archives/archive_docs-06/VulkanEngine/src/Core/Utility/: CMakeLists.txt
archives/archive_docs-06/VulkanEngine/src/Editor/: Editor.h
archives/archive_docs-06/VulkanEngine/src/Engine/: CMakeLists.txt  Engine.h
archives/archive_docs-06/archive/v2.0.0/simple_cmake_project/: CMakeLists.txt  ci_test_example.bat  conanfile.txt  graph.html
archives/archive_docs-06/files/Renderer/: CMakeLists.txt  drawTriangleTest.cpp  drawTriangleTest.h  test.cpp
archives/archive_docs-06/files/Renderer/RendererMain/: CMakeLists.txt  triangleApplicationTest.cpp  triangleApplicationTest.h
archives/archive_docs-06/files/ogun/src/Core/VulkanLib/: CMakeLists.txt
archives/archive_docs-06/files/ogun/test/Kernel/TestKernel0/: CMakeLists.txt  main.cpp
archives/archive_docs-06/files/ogun/test/Kernel/TestKernel1/: CMakeLists.txt  main.cpp  test_packet.cpp
archives/archive_docs-06/files/ogun/test/Kernel/TestKernel2/: CMakeLists.txt  main.cpp  main2.cpp
archives/archive_docs-06/ogun-render-engine/: .gitignore  CMakeLists.txt  README.md  project.cfg
archives/archive_docs-06/ogun-render-engine/assets/shaders/lighting/: default_lighting.frag.spv  default_lighting.vert.spv
archives/archive_docs-06/ogun-render-engine/cmake/: build.cmake  dependencies.cmake  project.cmake
archives/archive_docs-06/ogun-render-engine/src/: CMakeLists.txt
archives/archive_docs-06/ogun-render-engine/src/kernel/vulkan/: CMakeLists.txt  main.cpp  vulkan_init.cpp  vulkan_init.h
archives/archive_docs-06/ogun/test/Kernel/TestKernel0/: CMakeLists.txt  main.cpp  vulkan_scene.h  vulkan_shader.h
archives/archive_docs-06/projects/v1.0.0/ochosi/hesabu/: .gitattributes  .gitignore  CMakeLists.txt  README.md  project.cfg
archives/archive_docs-06/projects/v1.0.0/ochosi/hesabu/cmake/: build.cmake  install.cmake  project.cmake
archives/archive_docs-06/projects/v1.0.0/ochosi/hesabu/examples/: CMakeLists.txt
archives/archive_docs-06/projects/v1.0.0/ochosi/hesabu/src/: CMakeLists.txt
archives/archive_docs-06/projects/v1.0.0/ochosi/oguntestsandbox/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile
archives/archive_docs-06/projects/v1.0.0/ochosi/oguntestsandbox/cmake/: build.cmake  install.cmake  project.cmake
archives/archive_docs-06/projects/v1.0.0/ochosi/oguntestsandbox/scripts/: build_shaders.bat  compile_shaders.bat
archives/archive_docs-06/projects/v1.0.0/ochosi/oguntestsandbox/src/: CMakeLists.txt
archives/archive_docs-06/projects/v1.0.0/ochosi/oguntestsandbox/test/: CMakeLists.txt
archives/archive_docs-06/test_projects/java/testj1/bazel-testj1/: MODULE.bazel
archives/archive_docs-06/test_projects/java/testj1/bazel-testj1/bazel-out/: stable-status.txt
archives/archive_docs-08/ume-os/src-dev/modules/supplychain/: Cargo.toml
archives/archive_docs-08/ume-os/src-dev/modules/supplychain/src/: supplychain.rs
(+3370 files in other folders)
