# HEADER_PLACEHOLDER
cmake_minimum_required(VERSION 3.18)
#-----------------------------------------------------------
# @brief: Add project source sub folders
# @note : N/A
#-----------------------------------------------------------
project(Core)

# components
add_subdirectory(Graphics)
add_subdirectory(Utility)
