#-----------------------------------------------------------
# @header DEFAULT
# @brief
# @note
#-----------------------------------------------------------
cmake_minimum_required(VERSION 3.18)

# Project components
set(_core Core)
set(_modules Modules)

# add sub directories
# add_subdirectory(${_core})
